--- a/blocks/header-nav-chain-block/_index.scss
+++ b/blocks/header-nav-chain-block/_index.scss
@@ -160,6 +160,11 @@
 	}
 
 	&__top-layout {
+		&--center-logo {
+			@include scss.block-components("header-nav-chain-top-layout-center-logo");
+			@include scss.block-properties("header-nav-chain-top-layout-center-logo");
+		}
+
 		@include scss.block-components("header-nav-chain-top-layout");
 		@include scss.block-properties("header-nav-chain-top-layout");
 	}
